parser/Absyn.h

typedef char* UVar;
typedef char* LVar;
/********************   Forward Declarations    ***********************/
struct Graph_;
typedef struct Graph_ *Graph;
struct Binding_;
typedef struct Binding_ *Binding;
struct GraphBinding_;
typedef struct GraphBinding_ *GraphBinding;
struct AttrVal_;
struct Vertex_;
typedef struct Vertex_ *Vertex;
struct Name_;
typedef struct Name_ *Name;
/********************   Abstract Syntax Classes    ********************/

struct Graph_
{
  enum { is_GNil, is_GVertex, is_GVar, is_GNominate, is_GEdgeAnon, is_GEdgeNamed, is_GRuleAnon, is_GRuleNamed, is_GSubgraph, is_GTensor } kind;
  union
  {
    struct { Graph graph_; Vertex vertex_; } gVertex_;
    struct { Graph graph_; LVar lvar_; } gVar_;
    struct { Binding binding_; } gNominate_;
    struct { Binding binding_1, binding_2; } gEdgeAnon_;
    struct { Binding binding_1, binding_2; Name name_; } gEdgeNamed_;
    struct { Graph graph_1, graph_2; } gRuleAnon_;
    struct { Graph graph_1, graph_2; Name name_; } gRuleNamed_;
    struct { GraphBinding graphbinding_; } gSubgraph_;
    struct { Graph graph_1, graph_2; } gTensor_;
  } u;
};
Graph make_GNil(void);
Graph make_GVertex(Vertex p0, Graph p1);
Graph make_GVar(LVar p0, Graph p1);
Graph make_GNominate(Binding p0);
Graph make_GEdgeAnon(Binding p0, Binding p1);
Graph make_GEdgeNamed(Name p0, Binding p1, Binding p2);
Graph make_GRuleAnon(Graph p0, Graph p1);
Graph make_GRuleNamed(Name p0, Graph p1, Graph p2);
Graph make_GSubgraph(GraphBinding p0);
Graph make_GTensor(Graph p0, Graph p1);
struct Binding_
{
  enum { is_VBind } kind;
  union
  {
    struct { Graph graph_; LVar lvar_; Vertex vertex_; } vBind_;
  } u;
};
Binding make_VBind(LVar p0, Vertex p1, Graph p2);
struct GraphBinding_
{
  enum { is_GBind } kind;
  union
  {
    struct { Graph graph_1, graph_2; UVar uvar_; } gBind_;
  } u;
};
GraphBinding make_GBind(UVar p0, Graph p1, Graph p2);
struct AttrVal_
{
  enum { is_AttributeValue } kind;
  union
  {
    struct { LVar lvar_; } attributeValue_;
  } u;
};
struct Vertex_
{
  enum { is_VName } kind;
  union
  {
    struct { ListAttr listattr_; Name name_; } vName_;
  } u;
};
struct Name_
{
  enum { is_NameWildcard, is_NameVVar, is_NameGVar, is_NameQuoteGraph, is_NameQuoteVertex } kind;
  union
  {
    struct { LVar lvar_; } nameVVar_;
    struct { UVar uvar_; } nameGVar_;
    struct { Graph graph_; } nameQuoteGraph_;
    struct { Vertex vertex_; } nameQuoteVertex_;
  } u;
};