src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Graph___bindgen_ty_2__bindgen_ty_9"]
        [::std::mem::size_of::<Graph___bindgen_ty_2__bindgen_ty_9>() - 16usize];
    ["Alignment of Graph___bindgen_ty_2__bindgen_ty_9"]
        [::std::mem::align_of::<Graph___bindgen_ty_2__bindgen_ty_9>() - 8usize];
    ["Offset of field: Graph___bindgen_ty_2__bindgen_ty_9::graph_1"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2__bindgen_ty_9, graph_1) - 0usize];
    ["Offset of field: Graph___bindgen_ty_2__bindgen_ty_9::graph_2"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2__bindgen_ty_9, graph_2) - 8usize];
};
impl Default for Graph___bindgen_ty_2__bindgen_ty_9 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Graph___bindgen_ty_2"][::std::mem::size_of::<Graph___bindgen_ty_2>() - 24usize];
    ["Alignment of Graph___bindgen_ty_2"][::std::mem::align_of::<Graph___bindgen_ty_2>() - 8usize];
    ["Offset of field: Graph___bindgen_ty_2::gVertex_"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2, gVertex_) - 0usize];
    ["Offset of field: Graph___bindgen_ty_2::gVar_"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2, gVar_) - 0usize];
    ["Offset of field: Graph___bindgen_ty_2::gNominate_"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2, gNominate_) - 0usize];
    ["Offset of field: Graph___bindgen_ty_2::gEdgeAnon_"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2, gEdgeAnon_) - 0usize];
    ["Offset of field: Graph___bindgen_ty_2::gEdgeNamed_"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2, gEdgeNamed_) - 0usize];
    ["Offset of field: Graph___bindgen_ty_2::gRuleAnon_"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2, gRuleAnon_) - 0usize];
    ["Offset of field: Graph___bindgen_ty_2::gRuleNamed_"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2, gRuleNamed_) - 0usize];
    ["Offset of field: Graph___bindgen_ty_2::gSubgraph_"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2, gSubgraph_) - 0usize];
    ["Offset of field: Graph___bindgen_ty_2::gTensor_"]
        [::std::mem::offset_of!(Graph___bindgen_ty_2, gTensor_) - 0usize];
};
impl Default for Graph___bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Graph_"][::std::mem::size_of::<Graph_>() - 32usize];
    ["Alignment of Graph_"][::std::mem::align_of::<Graph_>() - 8usize];
    ["Offset of field: Graph_::kind"][::std::mem::offset_of!(Graph_, kind) - 0usize];
    ["Offset of field: Graph_::u"][::std::mem::offset_of!(Graph_, u) - 8usize];
};
impl Default for Graph_ {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn make_GNil() -> Graph;
}
unsafe extern "C" {
    pub fn make_GVertex(p0: Vertex, p1: Graph) -> Graph;
}
unsafe extern "C" {
    pub fn make_GVar(p0: LVar, p1: Graph) -> Graph;
}
unsafe extern "C" {
    pub fn make_GNominate(p0: Binding) -> Graph;
}
unsafe extern "C" {
    pub fn make_GEdgeAnon(p0: Binding, p1: Binding) -> Graph;
}
unsafe extern "C" {
    pub fn make_GEdgeNamed(p0: Name, p1: Binding, p2: Binding) -> Graph;
}
unsafe extern "C" {
    pub fn make_GRuleAnon(p0: Graph, p1: Graph) -> Graph;
}
unsafe extern "C" {
    pub fn make_GRuleNamed(p0: Name, p1: Graph, p2: Graph) -> Graph;
}
unsafe extern "C" {
    pub fn make_GSubgraph(p0: GraphBinding) -> Graph;
}
unsafe extern "C" {
    pub fn make_GTensor(p0: Graph, p1: Graph) -> Graph;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Binding_ {
    pub kind: Binding___bindgen_ty_1,
    pub u: Binding___bindgen_ty_2,
}
pub const Binding__is_VBind: Binding___bindgen_ty_1 = 0;
pub type Binding___bindgen_ty_1 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub union Binding___bindgen_ty_2 {
    pub vBind_: Binding___bindgen_ty_2__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Binding___bindgen_ty_2__bindgen_ty_1 {
    pub graph_: Graph,
    pub lvar_: LVar,
    pub vertex_: Vertex,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Binding___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::size_of::<Binding___bindgen_ty_2__bindgen_ty_1>() - 24usize];
    ["Alignment of Binding___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::align_of::<Binding___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Offset of field: Binding___bindgen_ty_2__bindgen_ty_1::graph_"]
        [::std::mem::offset_of!(Binding___bindgen_ty_2__bindgen_ty_1, graph_) - 0usize];
    ["Offset of field: Binding___bindgen_ty_2__bindgen_ty_1::lvar_"]
        [::std::mem::offset_of!(Binding___bindgen_ty_2__bindgen_ty_1, lvar_) - 8usize];
    ["Offset of field: Binding___bindgen_ty_2__bindgen_ty_1::vertex_"]
        [::std::mem::offset_of!(Binding___bindgen_ty_2__bindgen_ty_1, vertex_) - 16usize];
};
impl Default for Binding___bindgen_ty_2__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Binding___bindgen_ty_2"][::std::mem::size_of::<Binding___bindgen_ty_2>() - 24usize];
    ["Alignment of Binding___bindgen_ty_2"]
        [::std::mem::align_of::<Binding___bindgen_ty_2>() - 8usize];
    ["Offset of field: Binding___bindgen_ty_2::vBind_"]
        [::std::mem::offset_of!(Binding___bindgen_ty_2, vBind_) - 0usize];
};
impl Default for Binding___bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Binding_"][::std::mem::size_of::<Binding_>() - 32usize];
    ["Alignment of Binding_"][::std::mem::align_of::<Binding_>() - 8usize];
    ["Offset of field: Binding_::kind"][::std::mem::offset_of!(Binding_, kind) - 0usize];
    ["Offset of field: Binding_::u"][::std::mem::offset_of!(Binding_, u) - 8usize];
};
impl Default for Binding_ {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn make_VBind(p0: LVar, p1: Vertex, p2: Graph) -> Binding;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct GraphBinding_ {
    pub kind: GraphBinding___bindgen_ty_1,
    pub u: GraphBinding___bindgen_ty_2,
}
pub const GraphBinding__is_GBind: GraphBinding___bindgen_ty_1 = 0;
pub type GraphBinding___bindgen_ty_1 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub union GraphBinding___bindgen_ty_2 {
    pub gBind_: GraphBinding___bindgen_ty_2__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GraphBinding___bindgen_ty_2__bindgen_ty_1 {
    pub graph_1: Graph,
    pub graph_2: Graph,
    pub uvar_: UVar,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of GraphBinding___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::size_of::<GraphBinding___bindgen_ty_2__bindgen_ty_1>() - 24usize];
    ["Alignment of GraphBinding___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::align_of::<GraphBinding___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Offset of field: GraphBinding___bindgen_ty_2__bindgen_ty_1::graph_1"]
        [::std::mem::offset_of!(GraphBinding___bindgen_ty_2__bindgen_ty_1, graph_1) - 0usize];
    ["Offset of field: GraphBinding___bindgen_ty_2__bindgen_ty_1::graph_2"]
        [::std::mem::offset_of!(GraphBinding___bindgen_ty_2__bindgen_ty_1, graph_2) - 8usize];
    ["Offset of field: GraphBinding___bindgen_ty_2__bindgen_ty_1::uvar_"]
        [::std::mem::offset_of!(GraphBinding___bindgen_ty_2__bindgen_ty_1, uvar_) - 16usize];
};
impl Default for GraphBinding___bindgen_ty_2__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of GraphBinding___bindgen_ty_2"]
        [::std::mem::size_of::<GraphBinding___bindgen_ty_2>() - 24usize];
    ["Alignment of GraphBinding___bindgen_ty_2"]
        [::std::mem::align_of::<GraphBinding___bindgen_ty_2>() - 8usize];
    ["Offset of field: GraphBinding___bindgen_ty_2::gBind_"]
        [::std::mem::offset_of!(GraphBinding___bindgen_ty_2, gBind_) - 0usize];
};
impl Default for GraphBinding___bindgen_ty_2 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of GraphBinding_"][::std::mem::size_of::<GraphBinding_>() - 32usize];
    ["Alignment of GraphBinding_"][::std::mem::align_of::<GraphBinding_>() - 8usize];
    ["Offset of field: GraphBinding_::kind"][::std::mem::offset_of!(GraphBinding_, kind) - 0usize];
    ["Offset of field: GraphBinding_::u"][::std::mem::offset_of!(GraphBinding_, u) - 8usize];
};
impl Default for GraphBinding_ {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn make_GBind(p0: UVar, p1: Graph, p2: Graph) -> GraphBinding;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct AttrVal_ {
    pub kind: AttrVal___bindgen_ty_1,
    pub u: AttrVal___bindgen_ty_2,
}
pub const AttrVal__is_AttributeValue: AttrVal___bindgen_ty_1 = 0;
pub type AttrVal___bindgen_ty_1 = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub union AttrVal___bindgen_ty_2 {
    pub attributeValue_: AttrVal___bindgen_ty_2__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AttrVal___bindgen_ty_2__bindgen_ty_1 {
    pub lvar_: LVar,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of AttrVal___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::size_of::<AttrVal___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Alignment of AttrVal___bindgen_ty_2__bindgen_ty_1"]
        [::std::mem::align_of::<AttrVal___bindgen_ty_2__bindgen_ty_1>() - 8usize];
    ["Offset of field: AttrVal___bindgen_ty_2__bindgen_ty_1::lvar_"]
        [::std::mem::offset_of!(AttrVal___bindgen_ty_2__bindgen_ty_1, lvar_) - 0usize];
};
impl Default for AttrVal___bindgen_ty_2__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
